--- a/BlazorApp/appsettings.Development.json
+++ b/BlazorApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=BlazorSqlServerDev;User Id=sa;Password=1q2w3e4r@#;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost,1433;Database=BlazorApp;User Id=sa;Password=1q2w3e4r@#;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
