Adicionado mais um volume no docker-compose.yml para manter as chaves criptografadas mesmo após reinicialização do EC2, para funcionar esse volume foi adicionado no program serviços como 'AddDataProtection', 'PersistKeysToFileSystem' e 'SetApplicationName'.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 
 volumes:
   sqlserverdata:
+  dataprotectionkeys:
 
 services:
   sqlserverdb:
@@ -31,6 +32,8 @@ services:
       dockerfile: Dockerfile
     environment:
       ConnectionStrings__DefaultConnection: ${CONNECTION_STRING}
+    volumes:
+      - dataprotectionkeys:/var/dpkeys
     networks:
         - blazorappdev-network
     depends_on:
