Adicionado o restart: always  no docker-compose.yml para não precisar ficar acessando a EC2 pelo terminal e iniciar o docker compose para acessar a aplicação, dessa forma pode interromper a instância e iniciar a qualquer momento que vai conseguir acessar a aplicação sem precisar fazer nada.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
   sqlserverdb:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sqlserver-db
+    restart: always
     environment:
       SA_PASSWORD: ${SA_PASSWORD}
       ACCEPT_EULA: "Y"
@@ -25,6 +26,7 @@ services:
   blazorapp:
     image: ${DOCKER_REGISTRY-}blazorapp
     container_name: blazor-app
+    restart: always
     ports:
         - 8081:8080
     build:
